# cobol-v

./: .gitignore  CMakeLists.txt  README.md
demo/: cube_fs.cob  cube_vs.cob  main.cpp
docs/: language_spec.md
include/: ast.hpp  builtins.hpp  emitter.hpp  lexer.hpp  parser.hpp  semantics.hpp
sketch/: gpu-cobol-example-1.txt
src/: ast_dumper.hpp  builtins.cpp  emitter.cpp  lexer.cpp  main.cpp  parser.cpp  semantics.cpp  spirv_debug_dump.cpp  symbol_dumper.hpp
tests/: test_e2e.cpp  test_emitter.cpp  test_lexer.cpp  test_parser.cpp
tests/cases/: amber_test.amber  amber_test.cob  amber_test.dis  amber_test.spv  array_basic.cob  array_basic.dis  atomic_and_test.cob  atomic_and_test.dis  atomic_buffer_test.cob  atomic_buffer_test.dis  atomic_compare_exchange_test.cob  atomic_compare_exchange_test.dis  atomic_exchange_test.cob  atomic_exchange_test.dis  atomic_min_max_test.cob  atomic_min_max_test.dis  atomic_sub_test.cob  atomic_sub_test.dis  bitwise_test.cob  bitwise_test.dis  bitwise_type_err.cob  bitwise_type_err.err  builtins_test.cob  builtins_test.dis  cohort_elect_test.cob  cohort_elect_test.dis  cohort_scan_test.cob  cohort_scan_test.dis  cohort_sum_test.cob  cohort_sum_test.dis  combined_fetch_test.cob  combined_fetch_test.dis  comment_test.cob  comment_test.dis  compute_test.cob  compute_test.dis  data_types.cob  data_types.dis  debug_info_g.cob  debug_info_g.dis  (+220 more)
